--- a/css/agency.css
+++ b/css/agency.css
@@ -46,6 +46,7 @@ h6 {
 }
 
 .page-section h3.section-subheading {
+  background: #000000;
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
@@ -176,7 +177,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/escher.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
